--- a/public/javascripts/modules/orders/views/newOrder.html
+++ b/public/javascripts/modules/orders/views/newOrder.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-8 col-xs-offset-2">
-        <form name="newOrderForm" ng-submit="updateOrder()" class="form-horizontal" novalidate role="form">
+        <form name="newOrderForm" ng-submit="addOrder()" class="form-horizontal" novalidate role="form">
             <div ng-include="'/javascripts/modules/orders/views/_order.html'" />
         </form>
     </div>
