--- a/public/javascripts/modules/orders/views/orders.html
+++ b/public/javascripts/modules/orders/views/orders.html
@@ -3,24 +3,24 @@
     <td>顧客</td>
     <td>顧客項目名</td>
     <td>光庭項目名</td>
-    <td>NDA状態</td>
     <td>契約書状態</td>
     <td>作成者</td>
     <td>作成日付</td>
     <td>最後変更者</td>
     <td>最後変更日付</td>
+    <td>備考</td>
   </thead>
   <tbody>
     <tr ng-repeat="order in orders track by $index">
       <td>{{order.customer}}</td>
       <td>{{order.name_c}}</td>
       <td><a ui-sref="singleOrder({id:order._id})">{{order.name_k || "T.B.D"}}</a></td>
-      <td>{{order.nda}}</td>
       <td>{{order.contract}}</td>
       <td>{{order.author}}</td>
-      <td>{{order.date_create}}</td>
+      <td>{{order.date_create|date:'yyyy-MM-dd'}}</td>
       <td>{{order.updater}}</td>
-      <td>{{order.date_update}}</td>
+      <td>{{order.date_update|date:'yyyy-MM-dd'}}</td>
+      <td><textarea readonly="readonly">{{order.memo}}</textarea></td>
     </tr>
   </tbody>
 </table>
