--- a/public/javascripts/modules/accounts/views/resetpassword.html
+++ b/public/javascripts/modules/accounts/views/resetpassword.html
@@ -6,7 +6,7 @@
         <div ng-show="invalidLogin" class="alert alert-danger">Invalid username/password/reset code</div>
         <div class="input-group">
           <input type="text" class="form-control" placeholder="Username" ng-model="credentials.username" ng-required="ture"/>
-          <span class="input-group-addon">@kotei-info.com</span>
+          <span class="input-group-addon">{{mailsuffix}}</span>
         </div>
         <input type="text" class="form-control" placeholder="ResetCode" ng-model="credentials.resetcode" ng-required="ture"/>
         <input type="password" class="form-control" placeholder="Password" ng-model="credentials.password" ng-required="true"/>
