--- a/public/javascripts/modules/accounts/views/forgotpassword.html
+++ b/public/javascripts/modules/accounts/views/forgotpassword.html
@@ -5,7 +5,7 @@
       <form class="form-signin" ng-submit="forgotpassword()">
         <div class="input-group">
           <input type="text" class="form-control" placeholder="Username" ng-model="credentials.username" ng-required="ture"/>
-          <span class="input-group-addon">@kotei-info.com</span>
+          <span class="input-group-addon">{{mailsuffix}}</span>
         </div>
         <button class="btn btn-primary btn-block" type="submit">Reset Mail</button>
       </form>
