--- a/public/javascripts/modules/accounts/views/login.html
+++ b/public/javascripts/modules/accounts/views/login.html
@@ -6,7 +6,7 @@
         <div ng-show="invalidLogin" class="alert alert-danger">Invalid username/password</div>
         <div class="input-group">
           <input type="text" class="form-control" placeholder="Username" ng-model="credentials.username" ng-required="ture"/>
-          <span class="input-group-addon">@kotei-info.com</span>
+          <span class="input-group-addon">{{mailsuffix}}</span>
         </div>
         <input type="password" class="form-control" placeholder="Password" ng-model="credentials.password" ng-required="true"/>
         <div class="col-sm-12">
