validate account form

--- a/public/javascripts/modules/accounts/views/resetpassword.html
+++ b/public/javascripts/modules/accounts/views/resetpassword.html
@@ -1,17 +1,17 @@
 <div class="row">
-  <div class="col-sm-6 col-md-4 col-md-offset-4">
+  <div class="col-sm-6 col-md-offset-3">
     <h1 class="text-center login-title">Reset Password</h1>
     <div class="account-well">
-      <form class="form-signin" ng-submit="resetpassword()">
+      <form class="form-signin" ng-submit="resetpassword()" name="resetForm">
         <div ng-show="invalidLogin" class="alert alert-danger">Invalid username/password/reset code</div>
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="Username" ng-model="credentials.username" ng-required="ture"/>
+          <input type="text" class="form-control" placeholder="Username" ng-model="credentials.username" ng-required="ture" readonly="true"/>
           <span class="input-group-addon">{{mailsuffix}}</span>
         </div>
-        <input type="text" class="form-control" placeholder="ResetCode" ng-model="credentials.resetcode" ng-required="ture"/>
-        <input type="password" class="form-control" placeholder="Password" ng-model="credentials.password" ng-required="true"/>
-        <input type="password" class="form-control" placeholder="Same Password" ng-model="credentials.password2" ng-required="true"/>
-        <button class="btn btn-primary btn-block" type="submit">Reset</button>
+        <input type="text" class="form-control" placeholder="ResetCode" ng-model="credentials.resetcode" ng-required="ture" readonly="true"/>
+        <input type="password" name="password" class="form-control" placeholder="Password" ng-model="credentials.password" ng-required="true"/>
+        <input type="password" name="password2" class="form-control" placeholder="Same Password" ng-model="credentials.password2" ng-required="true"/>
+        <button class="btn btn-primary btn-block" ng-disabled="(!credentials.password) || (credentials.password != credentials.password2)" type="submit">Reset</button>
       </form>
     </div>
   </div>
