--- a/public/javascripts/modules/accounts/views/forgotpassword.html
+++ b/public/javascripts/modules/accounts/views/forgotpassword.html
@@ -1,13 +1,19 @@
 <div class="row">
-  <div class="col-sm-6 col-md-4 col-md-offset-4">
+  <div class="col-xs-6 col-xs-offset-3">
     <h1 class="text-center login-title">Forgot Password</h1>
     <div class="account-well">
-      <form class="form-signin" ng-submit="forgotpassword()">
-        <div class="input-group">
-          <input type="text" class="form-control" placeholder="Username" ng-model="credentials.username" ng-required="ture"/>
-          <span class="input-group-addon">{{mailsuffix}}</span>
+      <form class="form-signin" ng-submit="forgotpassword()" name="forgotForm">
+        <div class="form-group" ng-class="{'has-error':forgotForm.username.$dirty && forgotForm.username.$invalid}">
+          <label for="username" class="control-label col-sm-3">User Name</label>
+          <div class="col-sm-9">
+            <div class="input-group">
+              <input type="text" name="username" ng-model="credentials.username" ng-required="true" class="form-control" id="username" placeholder="User Name">
+              <span class="input-group-addon">{{mailsuffix}}</span>
+            </div>
+            <span class="error-message" ng-show="forgotForm.username.$dirty && forgotForm.username.$invalid">User name required</span>
+          </div>
         </div>
-        <button class="btn btn-primary btn-block" type="submit">Reset Mail</button>
+        <button class="btn btn-primary btn-block" ng-disabled="forgotForm.$invalid" type="submit">Reset Mail</button>
       </form>
     </div>
   </div>
