--- a/public/javascripts/modules/accounts/views/register.html
+++ b/public/javascripts/modules/accounts/views/register.html
@@ -1,15 +1,33 @@
 <div class="row">
-  <div class="col-sm-6 col-md-4 col-md-offset-4">
+  <div class="col-xs-6 col-xs-offset-3">
     <h1 class="text-center login-title">Register</h1>
     <div class="account-well">
-      <form class="form-signin" ng-submit="register()">
-        <div class="input-group">
-          <input type="text" class="form-control" placeholder="Username" ng-model="credentials.username" ng-required="ture"/>
-          <span class="input-group-addon">{{mailsuffix}}</span>
+      <form class="form-horizontal" ng-submit="register()" name="registerForm">
+        <div class="form-group" ng-class="{'has-error':registerForm.username.$dirty && registerForm.username.$invalid}">
+          <label for="username" class="control-label col-sm-3">User Name</label>
+          <div class="col-sm-9">
+            <div class="input-group">
+              <input type="text" name="username" ng-model="credentials.username" ng-required="true" class="form-control" id="username" placeholder="User Name">
+              <span class="input-group-addon">{{mailsuffix}}</span>
+            </div>
+            <span class="error-message" ng-show="registerForm.username.$dirty && registerForm.username.$invalid">User name required</span>
+          </div>
         </div>
-        <input type="text" class="form-control" placeholder="LastName" ng-model="credentials.lastname" ng-required="ture"/>
-        <input type="text" class="form-control" placeholder="FirstName" ng-model="credentials.firstname" ng-required="ture"/>
-        <button class="btn btn-primary btn-block" type="submit">Register</button>
+        <div class="form-group" ng-class="{'has-error':registerForm.lastname.$dirty && registerForm.lastname.$invalid}">
+          <label for="lastname" class="control-label col-sm-3">Last Name</label>
+          <div class="col-sm-9">
+            <input type="text" name="lastname" ng-model="credentials.lastname" ng-required="true" class="form-control" id="lastname" placeholder="Last Name">
+            <span class="error-message" ng-show="registerForm.lastname.$dirty && registerForm.lastname.$invalid">Last name required</span>
+          </div>
+        </div>
+        <div class="form-group" ng-class="{'has-error':registerForm.firstname.$dirty && registerForm.firstname.$invalid}">
+          <label for="firstname" class="control-label col-sm-3">First Name</label>
+          <div class="col-sm-9">
+            <input type="text" name="lastname" ng-model="credentials.firstname" ng-required="true" class="form-control" id="firstname" placeholder="First Name">
+            <span class="error-message" ng-show="registerForm.firstname.$dirty && registerForm.firstname.$invalid">First name required</span>
+          </div>
+        </div>
+        <button class="btn btn-primary btn-block" ng-disabled="registerForm.$invalid" type="submit">Register</button>
       </form>
     </div>
   </div>
