--- a/public/javascripts/modules/accounts/views/userprofile.html
+++ b/public/javascripts/modules/accounts/views/userprofile.html
@@ -12,7 +12,7 @@
             </div>
           </div>
         </div>
-        <div class="form-group" ng-if="permission">
+        <div class="form-group" ng-if="permission.admin">
           <label for="valid" class="col-sm-3 control-label">有効状態</label>
           <div class="col-sm-9">
             <input type="checkbox" ng-model="puser.valid" class="" id="valid" />有効
@@ -34,10 +34,10 @@
         </div>
         <div class="form-group">
           <label class="control-label col-sm-3">Permission</label>
-          <div class="col-sm-9" ng-if="permission">
+          <div class="col-sm-9" ng-if="permission.admin">
             <permission-edit permission="{{puser.permission}}" updater="updatePermission(args)"></permission-edit>
           </div>
-          <div class="col-sm-9" ng-if="!permission">
+          <div class="col-sm-9" ng-if="!permission.admin">
             <permission-view permission="{{puser.permission}}"></permission-view>
           </div>
         </div>
