--- a/public/javascripts/modules/orders/views/_order.html
+++ b/public/javascripts/modules/orders/views/_order.html
@@ -1,5 +1,5 @@
 <div>
-  <div class="form-group">
+  <div class="form-group" ng-if="permission.create">
     <label for="valid" class="col-sm-2 control-label">契約有効状態</label>
     <div class="col-sm-10">
       <input type="checkbox" ng-model="order.valid" class="" id="valid" />有効
