--- a/public/javascripts/modules/accounts/views/d_permission_view.html
+++ b/public/javascripts/modules/accounts/views/d_permission_view.html
@@ -1,3 +1,3 @@
-<span class="glyphicon glyphicon-pencil" ng-if="permission.indexOf('modify')"></span>
-<span class="glyphicon glyphicon-folder-open" ng-if="permission.indexOf('create')"></span>
-<span class="glyphicon glyphicon-user" ng-if="permission.indexOf('admin')"></span>
+<span class="glyphicon glyphicon-pencil" ng-if="permission.indexOf('modify')>=0"></span>
+<span class="glyphicon glyphicon-folder-open" ng-if="permission.indexOf('create')>=0"></span>
+<span class="glyphicon glyphicon-user" ng-if="permission.indexOf('admin')>=0"></span>
