--- a/public/js/accounts/views/d_permission_edit.html
+++ b/public/js/accounts/views/d_permission_edit.html
@@ -1,5 +1,5 @@
 <label class="item item-toggle">
-  Modify<i class="icon ion-edit"></i>
+  <span translate="T_ACCOUNTS_PRVLG_MODIFY"></span><i class="icon ion-edit"></i>
   <label class="toggle toggle-positive">
     <input type="checkbox" ng-model="checkModel.modify" disabled="disabled" ng-if="editable == 'false'">
     <input type="checkbox" ng-model="checkModel.modify" ng-if="editable == 'true'">
@@ -9,7 +9,7 @@
   </label>
 </label>
 <label class="item item-toggle">
-  Create<i class="icon ion-document"></i>
+  <span translate="T_ACCOUNTS_PRVLG_CREATE"></span><i class="icon ion-document"></i>
   <label class="toggle toggle-positive">
     <input type="checkbox" ng-model="checkModel.create" disabled="disabled" ng-if="editable == 'false'">
     <input type="checkbox" ng-model="checkModel.create" ng-if="editable == 'true'">
@@ -19,7 +19,7 @@
   </label>
 </label>
 <label class="item item-toggle">
-  UserAdmin<i class="icon ion-person-stalker"></i>
+  <span translate="T_ACCOUNTS_PRVLG_USERADMIN"></span><i class="icon ion-person-stalker"></i>
   <label class="toggle toggle-positive">
     <input type="checkbox" ng-model="checkModel.admin" disabled="disabled" ng-if="editable == 'false'">
     <input type="checkbox" ng-model="checkModel.admin" ng-if="editable == 'true'">
