--- a/public/js/accounts/views/resetpassword.html
+++ b/public/js/accounts/views/resetpassword.html
@@ -1,26 +1,27 @@
-<ion-view view-title="Reset Password">
+<ion-view>
+  <ion-nav-title translate="T_ACCOUNTS_RESETPASSWORD"></ion-nav-title>
   <ion-content>
     <form ng-submit="doReset()">
       <div class="list">
         <label class="item item-input">
-          <span class="input-label">Username</span>
+          <span class="input-label" translate="T_ACCOUNTS_USERNAME"></span>
           <input type="text" ng-model="credentials.username">
           <span class="input-label">{{mailsuffix}}</span>
         </label>
         <label class="item item-input">
-          <span class="input-label">ResetCode</span>
+          <span class="input-label" translate="T_ACCOUNTS_RESETCODE"></span>
           <input type="text" ng-model="credentials.resetcode">
         </label>
         <label class="item item-input">
-          <span class="input-label">Password</span>
+          <span class="input-label" translate="T_ACCOUNTS_PASSWORD"></span>
           <input type="password" ng-model="credentials.password" ng-required="true">
         </label>
         <label class="item item-input">
-          <span class="input-label">Password2</span>
+          <span class="input-label" translate="T_ACCOUNTS_VERIFYPASSWORD"></span>
           <input type="password" ng-model="credentials.password2" ng-requried="true">
         </label>
         <label class="item">
-          <button ng-disabled="(!credentials.password) || (credentials.password != credentials.password2)" class="button button-block button-positive" type="submit">Reset</button>
+          <button ng-disabled="(!credentials.password) || (credentials.password != credentials.password2)" class="button button-block button-positive" type="submit" translate="T_ACCOUNTS_BTN_RESET"></button>
         </label>
       </div>
     </form>
