--- a/public/js/accounts/views/login.html
+++ b/public/js/accounts/views/login.html
@@ -1,32 +1,32 @@
 <ion-modal-view>
   <ion-header-bar>
-    <h1 class="title">Login</h1>
+    <h1 class="title" translate="T_ACCOUNTS_LOGIN"></h1>
     <div class="buttons">
-      <button class="button button-clear" ng-click="closeLogin()">Close</button>
+      <button class="button button-clear" ng-click="closeLogin()" translate="T_ACCOUNTS_BTN_CLOSE"></button>
     </div>
   </ion-header-bar>
   <ion-content>
     <form ng-submit="doLogin()">
       <div class="list">
         <label class="item item-input">
-          <span class="input-label">Username</span>
+          <span class="input-label" translate="T_ACCOUNTS_USERNAME"></span>
           <input type="text" ng-model="loginData.username">
           <span class="input-label">{{mailsuffix}}</span>
         </label>
         <label class="item item-input">
-          <span class="input-label">Password</span>
+          <span class="input-label" translate="T_ACCOUNTS_PASSWORD"></span>
           <input type="password" ng-model="loginData.password">
         </label>
         <label class="item">
-          <button class="button button-block button-positive" type="submit" ng-disabled="!loginData.username || !loginData.password">Log in</button>
+          <button class="button button-block button-positive" type="submit" ng-disabled="!loginData.username || !loginData.password" translate="T_ACCOUNTS_BTN_LOGIN"></button>
         </label>
         <label class="item">
-          <button class="button button-block button-energized" type="button" ng-disabled="!loginData.username" ng-click="forgot()">Forgot Password</button>
+          <button class="button button-block button-energized" type="button" ng-disabled="!loginData.username" ng-click="forgot()" translate="T_ACCOUNTS_BTN_FORGOT"></button>
         </label>
       </div>
     </form>
   </ion-content>
   <ion-footer-bar class="bar-assertive" ng-show="invalidLogin">
-    <div class="title">Invalid username/password</div>
+    <div class="title" translate="T_ACCOUNTS_ERR_LOGIN"></div>
   </ion-footbar-bar>
 </ion-modal-view>
