accounts module cn/en translation

--- a/public/js/accounts/views/resetpassword.html
+++ b/public/js/accounts/views/resetpassword.html
@@ -27,6 +27,6 @@
     </form>
   </ion-content>
   <ion-footer-bar class="bar-balanced" ng-show="finishReset">
-    <div class="title">Reset Finished</div>
+    <div class="title" translate="T_ACCOUNTS_MSG_RESETFINISH"></div>
   </ion-footbar-bar>
 </ion-view>
