--- a/public/js/accounts/views/useradmin.html
+++ b/public/js/accounts/views/useradmin.html
@@ -41,9 +41,9 @@
         <i class="icon ion-chevron-left"></i>
       </button>
     </div>
-    <h1 class="title" ng-if="currentIdx == 0">Valid User</h1>
-    <h1 class="title" ng-if="currentIdx == 1">InValid User</h1>
-    <h1 class="title" ng-if="currentIdx == 2">Applying User</h1>
+    <h1 class="title" ng-if="currentIdx == 0" translate="T_ACCOUNTS_VALIDUSER"></h1>
+    <h1 class="title" ng-if="currentIdx == 1" translate="T_ACCOUNTS_INVALIDUSER"></h1>
+    <h1 class="title" ng-if="currentIdx == 2" translate="T_ACCOUNTS_APPLYUSER"></h1>
     <div class="buttons">
       <button class="button" ng-click="nextTab();">
         <i class="icon ion-chevron-right"></i>
