--- a/public/js/accounts/views/resetpassword.html
+++ b/public/js/accounts/views/resetpassword.html
@@ -21,7 +21,7 @@
           <input type="password" ng-model="credentials.password2" ng-requried="true">
         </label>
         <label class="item">
-          <button ng-disabled="(!credentials.password) || (credentials.password != credentials.password2)" class="button button-block button-positive" type="submit" translate="T_ACCOUNTS_BTN_RESET"></button>
+          <button ng-disabled="(!credentials.username) || (!credentials.resetcode) || (!credentials.password) || (credentials.password != credentials.password2)" class="button button-block button-positive" type="submit" translate="T_ACCOUNTS_BTN_RESET"></button>
         </label>
       </div>
     </form>
