refactor login's url

--- a/public/js/accounts/views/menu.html
+++ b/public/js/accounts/views/menu.html
@@ -20,7 +20,7 @@
         <ion-item menu-close ng-click="register()" ng-if="!user">
           <span translate="T_ACCOUNTS_REGISTER"></span>
         </ion-item>
-        <ion-item menu-close ng-click="login()" ng-if="!user">
+        <ion-item menu-close href="#/account/login" ng-if="!user">
           <span translate="T_ACCOUNTS_LOGIN"></span>
         </ion-item>
         <ion-item menu-close href="#/account/resetpassword//" ng-if="!user">
