--- a/public/js/accounts/views/login.html
+++ b/public/js/accounts/views/login.html
@@ -1,10 +1,5 @@
-<ion-modal-view>
-  <ion-header-bar>
-    <h1 class="title" translate="T_ACCOUNTS_LOGIN"></h1>
-    <div class="buttons">
-      <button class="button button-clear" ng-click="closeLogin()" translate="T_ACCOUNTS_BTN_CLOSE"></button>
-    </div>
-  </ion-header-bar>
+<ion-view>
+  <ion-nav-title translate="T_ACCOUNTS_LOGIN"></ion-nav-title>
   <ion-content>
     <form ng-submit="doLogin()">
       <div class="list">
@@ -29,4 +24,4 @@
   <ion-footer-bar class="bar-assertive" ng-show="invalidLogin">
     <div class="title" translate="T_ACCOUNTS_ERR_LOGIN"></div>
   </ion-footbar-bar>
-</ion-modal-view>
+</ion-view>
