add project module

--- a/public/js/homes/views/index.html
+++ b/public/js/homes/views/index.html
@@ -7,7 +7,7 @@
       <div class="col card" ng-click="jump('account.search');">
         <span translate="T_HOMES_ITEM_ACCOUNT"></span>
       </div>
-      <div class="col card">
+      <div class="col card" ng-click="jump('project.list');">
         <span translate="T_HOMES_ITEM_PROJECT"></span>
       </div>
       <div class="col card" ng-click="setting();">
