--- a/public/js/projects/views/list.html
+++ b/public/js/projects/views/list.html
@@ -1,6 +1,10 @@
 <ion-view>
   <ion-nav-title translate="T_PROJECTS_LIST"></ion-nav-title>
   <ion-content>
-    <div>1234</div>
+    <div class="list">
+      <div class="item" ng-repeat="project in projects track by $index">
+        <a ui-sref="project.item({id:project._id})">{{project.name_k}}</a>
+      </div>
+    </div>
   </ion-content>
 </ion-view>
