--- a/public/js/homes/views/index.html
+++ b/public/js/homes/views/index.html
@@ -4,7 +4,7 @@
   </ion-header-bar>
   <ion-content>
     <div class="row">
-      <div class="col card" ng-click="jump('account.search');">
+      <div class="col card" ng-click="jump('account.userprofile');">
         <span translate="T_HOMES_ITEM_ACCOUNT"></span>
       </div>
       <div class="col card" ng-click="jump('project.list');">
