--- a/public/js/accounts/views/userprofile.html
+++ b/public/js/accounts/views/userprofile.html
@@ -25,6 +25,10 @@
           <span class="input-label" translate="T_ACCOUNTS_FIRSTNAME"></span>
           <input type="text" ng-model="puser.first_name">
         </label>
+        <label class="item item-input">
+          <span class="input-label" translate="T_ACCOUNTS_WORKID"></span>
+          <input type="text" ng-model="puser.workid">
+        </label>
         <permission-edit permission="{{puser.permission}}" editable="{{permission.admin}}" updater="updatePermission(args)"></permission-edit>
         <label class="item">
           <button ng-disabled="!profileForm.$dirty" class="button button-block button-positive" type="submit" translate="T_ACCOUNTS_BTN_UPDATE"></button>
