用户数据初期化处理，操作失败提示

--- a/public/js/accounts/views/changepassword.html
+++ b/public/js/accounts/views/changepassword.html
@@ -26,7 +26,8 @@
       </div>
     </form>
   </ion-content>
-  <ion-footer-bar class="bar-balanced" ng-show="finishReset">
-    <div class="title" translate="T_ACCOUNTS_MSG_RESETFINISH"></div>
+  <ion-footer-bar ng-class="classFooterbar" ng-show="showFooterbar">
+    <div class="title" translate="T_ACCOUNTS_MSG_CHANGEFINISH" ng-if="finishChange"></div>
+    <div class="title" translate="T_ACCOUNTS_ERR_CHANGE" ng-if="invalidChange"></div>
   </ion-footbar-bar>
 </ion-modal-view>
