--- a/public/js/homes/views/index.html
+++ b/public/js/homes/views/index.html
@@ -10,6 +10,9 @@
       <div class="col card" ng-click="jump('project.list');">
         <span translate="T_HOMES_ITEM_PROJECT"></span>
       </div>
+      <div class="col card" ng-click="jump('crm.companies');">
+        <span translate="T_HOMES_ITEM_CRM"></span>
+      </div>
       <div class="col card" ng-click="setting();">
         <span translate="T_HOMES_ITEM_SETTING"></span>
       </div>
