--- a/public/js/accounts/views/userprofile.html
+++ b/public/js/accounts/views/userprofile.html
@@ -25,6 +25,18 @@
           <span class="input-label" translate="T_ACCOUNTS_FIRSTNAME"></span>
           <input type="text" ng-model="puser.first_name">
         </label>
+        <label class="item item-toggle" ng-if="permission.admin">
+          <span translate="T_ACCOUNTS_GENDER"></span>
+          <label class="toggle toggle-positive">
+            <input type="checkbox" ng-model="puser.gender">
+            <div class="track">
+              <div class="handle">
+                <span class="h3" translate="T_ACCOUNTS_GENDER_MALE" ng-if="puser.gender"></span>
+                <span class="h3" translate="T_ACCOUNTS_GENDER_FEMALE" ng-if="!puser.gender"></span>
+              </div>
+            </div>
+          </label>
+        </label>
         <label class="item item-input">
           <span class="input-label" translate="T_ACCOUNTS_WORKID"></span>
           <input type="text" ng-model="puser.workid">
