项目管理框架

--- a/public/js/homes/views/index.html
+++ b/public/js/homes/views/index.html
@@ -7,7 +7,7 @@
       <div class="col card" ng-click="jump('account.userprofile');">
         <span translate="T_HOMES_ITEM_ACCOUNT"></span>
       </div>
-      <div class="col card" ng-click="jump('project.list');">
+      <div class="col card" ng-click="jump('project.projects');">
         <span translate="T_HOMES_ITEM_PROJECT"></span>
       </div>
       <div class="col card" ng-click="jump('crm.companies');">
