--- a/public/js/projects/views/menu.html
+++ b/public/js/projects/views/menu.html
@@ -17,7 +17,7 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close href="#/project/list">
+        <ion-item menu-close href="#/project/projects">
           <span translate="T_PROJECTS_LIST"></span>
         </ion-item>
         <ion-item menu-close ng-click="goHome()">
